changed to Lombok based constructors, formating