@@ -9,8 +9,11 @@ import com.ttt.ikna.mappers.DeckMapper;
 import com.ttt.ikna.mappers.FlashCardMapper;
 import com.ttt.ikna.repositories.DeckRepository;
 import com.ttt.ikna.repositories.UserRepository;
+import lombok.AllArgsConstructor;
+import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.ArrayList;
 import java.util.Date;
@@ -19,51 +22,55 @@ import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class DeckService {
     private final DeckRepository deckRepository;
-
     private final DeckMapper deckMapper;
     private final FlashCardMapper flashCardMapper;
     private final UserRepository userRepository;
 
-    public DeckService(DeckRepository deckRepository, DeckMapper deckMapper, FlashCardMapper flashCardMapper, UserRepository userRepository) {
-        this.deckRepository = deckRepository;
-        this.deckMapper = deckMapper;
-        this.flashCardMapper = flashCardMapper;
-        this.userRepository = userRepository;
-    }
-    public Optional<DeckDTO> find(Long id){
+    @Transactional(readOnly = true)
+    public Optional<DeckDTO> find(Long id) {
         return deckRepository.findById(id).map(this::convertToDto);
     }
-    public List<DeckDTO> findAll(){
-        return deckRepository.findAll().stream().map(this::convertToDto).collect(Collectors.toList());
+
+    @Transactional(readOnly = true)
+    public List<DeckDTO> findAll() {
+        return deckRepository.findAll().stream().map(this::convertToDto).toList();
     }
-    public DeckDTO save(DeckDTO deckDTO){
+
+    @Transactional
+    public DeckDTO save(DeckDTO deckDTO) {
         Deck deck = convertToEntity(deckDTO);
         User user = userRepository.findById(deckDTO.getUserId()).orElse(null);
         deck.setUser(user);
         return convertToDto(deckRepository.save(deck));
     }
-    public void delete(Long id){
+
+    @Transactional
+    public void delete(Long id) {
         deckRepository.deleteById(id);
     }
-    public Deck convertToEntity(DeckDTO deckDTO){
+
+    public Deck convertToEntity(DeckDTO deckDTO) {
         Deck deck = deckMapper.deckDTOToDeck(deckDTO);
-        deck.setUser(userRepository.getById(deckDTO.getUserId()));
+        deck.setUser(userRepository.findById(deckDTO.getUserId()).orElse(null));
         List<FlashCard> flashCards = deckDTO.getFlashCards().stream().map(flashCardMapper::flashCardDTOToFlashCard).toList();
         flashCards.forEach(flashCard -> flashCard.setDeck(deck));
         deck.setFlashCards(flashCards);
         return deck;
     }
-    public DeckDTO convertToDto(Deck deck){
+
+    public DeckDTO convertToDto(Deck deck) {
         DeckDTO deckDTO = deckMapper.deckToDeckDTO(deck);
         deckDTO.setFlashCards(deck.getFlashCards().stream().map(flashCardMapper::flashCardToFlashCardDTO).toList());
         return deckDTO;
     }
 
+    @Transactional
     public List<FlashCardDTO> findDue(long id) {
         Deck deck = deckRepository.findById(id).orElse(null);
-        if(deck == null) {
+        if (deck == null) {
             return new ArrayList<>();
         }
         List<FlashCard> flashCards = deck.getFlashCards();
